--- a/cartuning/webapp/css/global.css
+++ b/cartuning/webapp/css/global.css
@@ -41,12 +41,12 @@
 	z-index:101;
 }
 #products .prev {
-	background:url(../images/arrow-prev.png);
+	background:url(http://localhost:8080/cartuning/images/arrow-prev.png);
 }
 
 #products .next {
 	left:350px;
-	background:url(../images/arrow-next.png);
+	background:url(http://localhost:8080/cartuning/images/arrow-next.png);
 }
 
 /*****Pagination********/
